--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow, max-image-preview:large">
     
     <link rel="canonical" href="https://jakartaglobenews.github.io/latest/judul">
-    <link href="img/favicon.ico" rel="icon">
+    <link href="https://images.icon-icons.com/70/PNG/512/bbc_news_14062.png" rel="icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
