--- a/rahasia-slot-online.html
+++ b/rahasia-slot-online.html
@@ -22,7 +22,7 @@
 
     <img src="https://res.cloudinary.com/da7p0wn22/image/upload/v1750412439/5_Rahasia_Slot_Online_yang_Jarang_Diketahui_Pemain_Baru_dy21lm.jpg" alt="Ilustrasi slot online" width="1200" height="675" style="width:100%; height:auto;"/>
     
-    <button onclick="window.location.href='stemoproduction.com/article'" style="padding: 12px 24px; font-size: 16px; background-color: #e60000; color: white; border: none; border-radius: 6px; cursor: pointer;">
+    <button onclick="window.location.href="https://stemoproduction.com/article" style="padding: 12px 24px; font-size: 16px; background-color: #e60000; color: white; border: none; border-radius: 6px; cursor: pointer;">
   Main Sekarang
     </button>
 
