--- a/rahasia-slot-online.html
+++ b/rahasia-slot-online.html
@@ -22,9 +22,9 @@
 
     <img src="https://res.cloudinary.com/da7p0wn22/image/upload/v1750412439/5_Rahasia_Slot_Online_yang_Jarang_Diketahui_Pemain_Baru_dy21lm.jpg" alt="Ilustrasi slot online" width="1200" height="675" style="width:100%; height:auto;"/>
     
-    <button onclick="window.location.href="https://stemoproduction.com/article" style="padding: 12px 24px; font-size: 16px; background-color: #e60000; color: white; border: none; border-radius: 6px; cursor: pointer;">
+    <a href="https://stemoproduction.com/article" style="display: inline-block; padding: 12px 24px; font-size: 16px; background-color: #e60000; color: white; border: none; border-radius: 6px; cursor: pointer; text-decoration: none;">
   Main Sekarang
-    </button>
+    </a>
 
     <h2>Pengantar – Dunia Slot Online Tak Seindah yang Terlihat</h2>
     <p>Slot online makin digandrungi pemain dari berbagai kalangan. Dengan tampilan yang menarik dan janji cuan besar, banyak pemula terjun ke dunia ini dengan harapan bisa menang cepat. Tapi sayangnya, gak semua orang tahu bahwa di balik layar game yang seru ini, ada rahasia-rahasia penting yang jarang diungkap oleh para pemain lama.</p>
